refactor: 全面品質優化 — dead code 清理、效能修正、安全強化
1. 移除 ApiLogFilter.logRequestLine() + extractBody() dead code
2. Collectors.toList() → .toList()，移除 unused import
3. TracingFilter 加 @ConditionalOnMissingBean
4. 路徑排除邏輯抽共用 PathExcludeHelper
5. NotificationService 改 saveAll 批次寫入 + 合併 deliver 方法
6. ApiResponse 移除 setters (immutable 化)
7. IllegalArgumentException handler 不透傳 ex.getMessage()
8. SecurityConfig public endpoints 可配置化 (care.security.web.public-endpoints)
9. 補齊 spring-boot-configuration-processor (attachment, report, security)
10. validateTemplatePath 加 allowedTemplatePrefixes whitelist

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>